<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="E_Type" Id="{1831786b-cc3b-4584-a83b-58839ae4003a}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_Type :
(
	alarm := 0,
	message := 1
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>